Add changing state filter when onChange in Filter and when switching browser pages in Filter Container. Add redux devtools.Change search route.

--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -25,7 +25,7 @@
 		box-shadow: 0 0 10px 1px $light-black;
 	}
 
-	&__btn {
+	&__label {
 		position: relative;
 		right: 30px;
 		display: inline-block;
