--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,11 +1,12 @@
 .app {
 	max-width: 1200px;
-	min-width: 700px;
+	min-width: 330px;
 	margin: 0 auto;
 	padding: 4%;
 
 	&__wrapper {
 		display: flex;
+		flex-wrap: wrap;
 		justify-content: space-between;
 	}
 }
