--- a/src/components/BookList/BookList.module.scss
+++ b/src/components/BookList/BookList.module.scss
@@ -6,6 +6,10 @@
 	margin-top: 70px;
 	width: 48%;
 
+	@include media-tablet {
+		width: 100%;
+	}
+
 	&__heading {
 		position: absolute;
 		top: -50px;
@@ -14,6 +18,10 @@
 		margin-bottom: 10px;
 		font-size: 1.5em;
 		font-weight: 500;
+
+		@include media-mobile {
+			left: -2%;
+		}
 	}
 }
 
