--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -4,7 +4,7 @@
 	margin: 0 auto;
 	padding: 4%;
 
-	&__wrapper {
+	.wrapper {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
