--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -13,7 +13,7 @@
 		width: auto;
 	}
 
-	&__heading {
+	.heading {
 		margin-left: 1%;
 		padding-left: 15px;
 		font-size: 1.5em;
@@ -24,7 +24,7 @@
 		}
 	}
 
-	&__input {
+	.input {
 		width: 100%;
 		padding: 8px 10px;
 		padding-right: 35px;
@@ -33,7 +33,7 @@
 		box-shadow: 0 0 10px 1px $light-black;
 	}
 
-	&__label {
+	.label {
 		position: relative;
 		right: 30px;
 		display: inline-block;
