--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -25,7 +25,7 @@
 		}
 	}
 
-	&__elem {
+	.elem {
 		width: 45%;
 		min-width: 200px;
 		margin: 0px 8px;
@@ -42,7 +42,7 @@
 		}
 	}
 
-	&__button {
+	.button {
 		position: absolute;
 		padding: 7px 10px;
 		bottom: 34px;
