Add modal window for confirmation of book deletion, refactore code and add Button component

--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -1,4 +1,6 @@
 $black: #000000;
+$beige: #ffecb5;
+$medium-black: rgba(0, 0, 0, 0.3);
 $light-black: rgba(0, 0, 0, 0.2);
 $lighter-black: rgba(0, 0, 0, 0.1);
 $dark-black: rgba(0, 0, 0, 0.6);
