--- a/src/components/Form/InputField/InputField.module.scss
+++ b/src/components/Form/InputField/InputField.module.scss
@@ -70,7 +70,12 @@
 				transform: translateY(0);
 				cursor: pointer;
 
-				& + .field__error {
+				@include media-mobile {
+					left: 50%;
+					transform: translateX(-50%);
+				}
+
+				& + .error {
 					top: 43px;
 				}
 
