--- a/src/components/BookCard/ModalConfirm/ModalConfirm.module.scss
+++ b/src/components/BookCard/ModalConfirm/ModalConfirm.module.scss
@@ -2,20 +2,35 @@
 @import '@styles/variables/colors.scss';
 
 .wrapper {
-	display: none;
 	position: absolute;
-	left: -50%;
-	transform: translateX(-56%);
+	display: none;
+	width: 100vw;
+	height: 100vh;
+	margin-left: calc(-50vw - 8%);
+	margin-top: calc(-50vh - 20%);
+
+	@include media-tablet {
+		height: calc(120vh - 10%);
+		margin-left: calc(-50vw + 46%);
+		margin-top: calc(-50vh - 33%);
+	}
+
+	@include media-mobile {
+		height: calc(120vh - 30%);
+	}
+}
+
+.modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	min-width: 350px;
-	margin-right: 50%;
-	margin-left: 50%;
 	padding: 25px 20px;
 	background-color: $beige;
 	border-radius: 8px;
 
 	@include media-tablet {
-		left: 0;
-		transform: translateX(-50%);
 		margin-top: 10px;
 	}
 
@@ -36,10 +51,10 @@
 	}
 
 	.buttons {
-		width: 100%;
-		margin: auto;
 		display: flex;
 		justify-content: space-evenly;
+		width: 100%;
+		margin: auto;
 
 		.btn {
 			width: 100px;
@@ -49,6 +64,10 @@
 
 			@include hoverSupport {
 				background-color: $medium-black;
+			}
+
+			&:focus {
+				box-shadow: 0 0 3px $black;
 			}
 		}
 	}
