--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -4,56 +4,35 @@
 
 .form {
 	position: relative;
-	padding: 20px;
-	padding-bottom: 0;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	padding: 2%;
 	border-radius: 8px;
 	background-color: $white;
 	box-shadow: 0 0 10px 1px $light-black;
 
 	@include media-mobile {
-		display: flex;
 		flex-direction: column;
-	}
-
-	& ul {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-
-		@include media-tablet {
-			flex-direction: column;
-		}
-	}
-
-	.elem {
-		width: 45%;
-		min-width: 200px;
-		margin: 0px 8px;
-		padding: 10px 0;
-
-		@include media-tablet {
-			width: auto;
-		}
-
-		&:last-child {
-			@include media-mobile {
-				align-self: center;
-			}
-		}
 	}
 
 	.button {
 		position: absolute;
 		padding: 7px 10px;
-		bottom: 34px;
+		bottom: 36px;
 		right: 0;
 		margin-right: 28px;
 		background-color: $lighter-black;
 		border-radius: 5px;
 
+		@include media-tablet {
+			bottom: 30px;
+		}
+
 		@include media-mobile {
 			position: relative;
-			margin: 25px auto 0;
+			bottom: 15px;
+			margin: 20px auto 0;
 		}
 
 		@include hoverSupport {
