--- a/src/components/Form/InputField/InputField.module.scss
+++ b/src/components/Form/InputField/InputField.module.scss
@@ -6,14 +6,20 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	width: 45%;
+	min-width: 200px;
+	margin: 0 2%;
+	padding: 10px 0;
 	min-height: 64px;
-	margin: auto;
+
+	@include media-mobile {
+		width: auto;
+	}
 
 	.label {
 		position: absolute;
 		left: 4%;
 		max-width: 100%;
-		overflow: hidden;
 		transition: transform 0.25s ease, font-size 0.25s ease;
 
 		&_small {
@@ -24,12 +30,16 @@
 
 	.input {
 		width: 100%;
-		min-height: 55px;
 		padding: 25px 10px 15px 17px;
 		border-radius: 6px;
 		font-family: inherit;
 		background-color: transparent;
 		background-color: $lighter-black;
+
+		@include media-tablet {
+			padding-top: 22px;
+			padding-bottom: 10px;
+		}
 
 		@include hoverSupport {
 			box-shadow: 0 0 3px $black;
@@ -58,7 +68,7 @@
 
 			& + label {
 				position: absolute;
-				top: 12%;
+				top: 17%;
 				left: 0;
 				text-align: center;
 				padding: 8px 10px;
@@ -68,6 +78,7 @@
 				white-space: nowrap;
 				background-color: $lighter-black;
 				transform: translateY(0);
+				transition: none;
 				cursor: pointer;
 
 				@include media-mobile {
@@ -76,7 +87,12 @@
 				}
 
 				& + .error {
-					top: 43px;
+					top: 44px;
+
+					@include media-mobile {
+						left: 50%;
+						transform: translateX(-50%);
+					}
 				}
 
 				@include hoverSupport {
@@ -95,9 +111,13 @@
 
 	.error {
 		position: absolute;
-		top: 65px;
+		top: 69px;
 		left: 0%;
 		font-size: 13px;
 		color: $red;
+
+		@include media-tablet {
+			top: 62px;
+		}
 	}
 }
