--- a/src/components/BookList/BookList.module.scss
+++ b/src/components/BookList/BookList.module.scss
@@ -90,3 +90,23 @@
 		}
 	}
 }
+
+.itemEnterActive {
+	animation: opacit 1s ease-in-out;
+}
+
+.itemExitActive {
+	animation: opacit 1s ease-in alternate-reverse;
+}
+
+@keyframes opacit {
+	0% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 0.5;
+	}
+	100% {
+		opacity: 1;
+	}
+}
